--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,19 @@
 	"proxy": "http://localhost:3001",
 	"license": "ISC",
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.8.5",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"@types/styled-components": "^5.1.26",
+		"axios": "^0.27.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "3.4.3",
+		"react-test-renderer": "^18.2.0",
+		"redux": "^4.2.0",
 		"styled-components": "^5.3.5",
 		"typescript": "^4.8.2"
 	},
