--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "3.4.3",
-		"react-test-renderer": "^18.2.0",
 		"redux": "^4.2.0",
 		"styled-components": "^5.3.5",
 		"typescript": "^4.8.2"
@@ -46,6 +45,11 @@
 		"@types/jest": "^24.9.1",
 		"@types/node": "^12.12.54",
 		"@types/react": "^16.9.46",
-		"@types/react-dom": "^16.9.8"
+		"@types/react-dom": "^16.9.8",
+		"@types/react-test-renderer": "^18.0.0",
+		"@types/redux-mock-store": "^1.0.3",
+		"msw": "^0.47.1",
+		"react-test-renderer": "^18.2.0",
+		"redux-mock-store": "^1.5.4"
 	}
 }
